Fix title decenders truncated bug.

--- a/client/app/topbar/topbar.styl
+++ b/client/app/topbar/topbar.styl
@@ -425,8 +425,8 @@ html.esSidebarsOverlayPage
       margin: 0;
       padding: 0;
     h1
-      margin: 33px 0 15px 0;
-      padding: 0;
+      margin: 33px 0 11px 0;
+      padding-top: 0;
       font-size: 26px;
 
     .dw-p-ttl-e,
